--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "RayeRen/acad-homepage.github.io"
+title                    : "zhengtao Lyu"
+description              : "MSc Applied Mathematics | Skilled in Python, Deep Learning (YOLO, CNN, LSTM), Machine Learning (SVM, Isolation Forest), and SQL data management.
+
+ "
+repository               : "zhengtaolyu/zhengtaolyu.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
