--- a/_config.yml
+++ b/_config.yml
@@ -39,13 +39,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "Zhengtao Lyu"
+  github           :  "www.linkedin.com/in/zhengtao-lyu-b65b382b9"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : # e.g., "Zhengtao Lyu"
+  linkedin         :  "www.linkedin.com/in/zhengtao-lyu-b65b382b9"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
